# agent-whip

./: .gitignore  Cargo.toml  LICENSE  README.md  appcast.xml
.github/workflows/: bump-cask.yml
examples/: gen_icon.rs
raycast/: whip.sh
scripts/: make-appcast.sh  make-cask.sh  make-dmg.sh  pack-app.sh  sign-bundle.sh
src/: config.rs  gpu.rs  input.rs  keys.rs  logging.rs  main.rs  render.rs  skins.rs  sound.rs  sparkle.rs  tray.rs  update.rs  whip.rs
